# DRF

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
materials/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
